--- a/index.html
+++ b/index.html
@@ -94,5 +94,51 @@
         <!-- Styles CSS -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body></body>
+    <body>
+        <!-- Header -->
+        <header class="header header__fixed">
+            <div class="container">
+                <!-- Logo -->
+                <div class="header__inner">
+                    <!-- Logo -->
+                    <a href="#">
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="CeloBank"
+                            class="logo"
+                        />
+                    </a>
+
+                    <!-- Nav -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li>
+                                <a
+                                    href="#!"
+                                    class="navbar__link navbar__link--active"
+                                >
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">Products</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">Blog</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- Header CTA -->
+                    <div class="header__cta">
+                        <a href="#!" class="header__log-in">Log in</a>
+                        <a href="#!" class="btn header__sign-up">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </body>
 </html>
