--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
 
         <!-- Embeb Fonts -->
+        <
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
             rel="stylesheet"
         />
 
@@ -485,6 +486,80 @@
                             </div>
                         </figure>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Work -->
+        <section class="work">
+            <div class="container">
+                <div class="work__inner">
+                    <!-- Work media -->
+                    <figure class="work-media">
+                        <img
+                            src="./assets/img/work.svg"
+                            alt="How It Works"
+                            class="work__img"
+                        />
+                        <div class="work-decor">
+                            <img src="./assets/icons/work-01.svg" alt="" />
+                            <div class="work-decor__content">
+                                <h3 class="work-decor__heading">
+                                    Congratulations
+                                </h3>
+                                <p class="work-decor__desc">
+                                    Your account activated
+                                </p>
+                            </div>
+                        </div>
+                    </figure>
+
+                    <!-- Work content -->
+                    <section class="work-content">
+                        <div class="work__title section-title">
+                            Digital Smart Wallet
+                        </div>
+                        <h2 class="work__heading section-heading">
+                            How It Works
+                        </h2>
+                        <div class="work__list">
+                            <!-- Work item 1 -->
+                            <article class="work__item">
+                                <h3 class="work-item__heading">
+                                    1. Open a High Interest Checking account
+                                </h3>
+                                <p class="work-time__desc section-desc">
+                                    Fund your bank account with a minimum
+                                    balance of $100. Enroll in 3 minutes or
+                                    less!
+                                </p>
+                            </article>
+
+                            <!-- Work item 2 -->
+                            <article class="work__item">
+                                <h3 class="work-item__heading">
+                                    2. 10 point-of-sale transactions each Month
+                                    that are at least $10 each.
+                                </h3>
+                                <p class="work-time__desc section-desc">
+                                    Be sure to use your rewards checking account
+                                    as often as possible in order to accue APYI
+                                </p>
+                            </article>
+
+                            <!-- Work item 3 -->
+                            <article class="work__item">
+                                <h3 class="work-item__heading">
+                                    3. Receive up to 5.50% APY
+                                </h3>
+                                <p class="work-time__desc section-desc">
+                                    The APY you earn will be based on your
+                                    account balance and satisfying the
+                                    transaction requirement.
+                                </p>
+                            </article>
+                        </div>
+                    </section>
                 </div>
             </div>
         </section>
