--- a/index.html
+++ b/index.html
@@ -793,6 +793,217 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Client -->
+            <section class="client">
+                <div class="container">
+                    <!-- Client top -->
+                    <section class="client-top">
+                        <div class="client__title section-title">
+                            Our Testimonial
+                        </div>
+                        <h2 class="clien__heading section-heading">
+                            What Clients Says
+                        </h2>
+                        <p class="client__desc section-desc">
+                            Read what clients says about us and about our online
+                            banking services that may inspire you
+                        </p>
+                    </section>
+
+                    <!-- Client botttom -->
+                    <div class="client-bottom">
+                        <div class="client__list">
+                            <!-- Client item 1 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-01.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Cook
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+
+                            <!-- Client item 2 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-02.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Foaks
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+
+                            <!-- Client item 3 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-01.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Cook
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+
+                            <!-- Client item 4 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-02.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Foaks
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+
+                            <!-- Client item 5 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-01.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Cook
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+
+                            <!-- Client item 6 -->
+                            <article class="client-item">
+                                <div class="client-item__comment">
+                                    <p class="client-item__desc">
+                                        Fantastic platform for online banking.
+                                        The best online banking platform I have
+                                        used. Payments, loans, and money
+                                        transfers have never been so much easier
+                                        before. I am very much happy about this
+                                        great online bank.
+                                    </p>
+                                </div>
+
+                                <div class="client-item__avatar">
+                                    <figure class="client-item__img">
+                                        <img
+                                            src="./assets/img/client-avatar-02.svg"
+                                            alt=""
+                                            class="client-item__thumb"
+                                        />
+                                    </figure>
+                                    <figcaption class="client-item__name">
+                                        Alastair Foaks
+                                    </figcaption>
+                                    <p class="client-item__work section-desc">
+                                        Businessmen
+                                    </p>
+                                </div>
+                            </article>
+                        </div>
+
+                        <!-- Client dots -->
+                        <div class="client__dots">
+                            <div class="client__dot client__dot--active"></div>
+                            <div class="client__dot"></div>
+                            <div class="client__dot"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
