--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,149 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Blog -->
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__inner">
+                        <!-- Blog top -->
+                        <section class="blog-top">
+                            <div class="blog-top__row">
+                                <div class="blog__title section-title">
+                                    Our Blog
+                                </div>
+                                <h2 class="blog__heading section-heading">
+                                    Get The Updates
+                                </h2>
+                                <p class="blog__desc section-desc">
+                                    Read our blog for the regular updates about
+                                    us and about our online banking services
+                                    that may inspire you
+                                </p>
+                            </div>
+                            <a href="#!" class="btn blog__btn">Read All</a>
+                        </section>
+
+                        <!-- Blog bottom -->
+                        <div class="blog-bottom">
+                            <ul class="blog__list">
+                                <!-- Blog item 1 -->
+                                <li class="blog-item">
+                                    <div class="blog-item__wrap">
+                                        <figure class="blog-item__media">
+                                            <img
+                                                src="./assets/img/blog-01.svg"
+                                                alt=""
+                                                class="blog-item__img"
+                                            />
+                                        </figure>
+                                        <div class="blog-item__info">
+                                            <div class="blog-item__title">
+                                                July 03, 2022
+                                            </div>
+                                            <h3 class="blog-item__heading">
+                                                Online bank is the best and
+                                                secure way to save in the
+                                                future...
+                                            </h3>
+                                            <a
+                                                href="#!"
+                                                class="blog-item__link"
+                                            >
+                                                Read Blog
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <!-- Blog item 2 -->
+                                <li class="blog-item">
+                                    <div class="blog-item__wrap">
+                                        <figure class="blog-item__media">
+                                            <img
+                                                src="./assets/img/blog-02.svg"
+                                                alt=""
+                                                class="blog-item__img"
+                                            />
+                                        </figure>
+                                        <div class="blog-item__info">
+                                            <div class="blog-item__title">
+                                                July 03, 2022
+                                            </div>
+                                            <h3 class="blog-item__heading">
+                                                Why do you need to open a bank
+                                                account in online..
+                                            </h3>
+                                            <a
+                                                href="#!"
+                                                class="blog-item__link"
+                                            >
+                                                Read Blog
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <!-- Blog item 3 -->
+                                <li class="blog-item">
+                                    <div class="blog-item__wrap">
+                                        <figure class="blog-item__media">
+                                            <img
+                                                src="./assets/img/blog-03.svg"
+                                                alt=""
+                                                class="blog-item__img"
+                                            />
+                                        </figure>
+                                        <div class="blog-item__info">
+                                            <div class="blog-item__title">
+                                                July 03, 2022
+                                            </div>
+                                            <h3 class="blog-item__heading">
+                                                The benefits that we get from
+                                                credit card at anytime...
+                                            </h3>
+                                            <a
+                                                href="#!"
+                                                class="blog-item__link"
+                                            >
+                                                Read Blog
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <!-- Blog item 4 -->
+                                <li class="blog-item">
+                                    <div class="blog-item__wrap">
+                                        <figure class="blog-item__media">
+                                            <img
+                                                src="./assets/img/blog-04.svg"
+                                                alt=""
+                                                class="blog-item__img"
+                                            />
+                                        </figure>
+                                        <div class="blog-item__info">
+                                            <div class="blog-item__title">
+                                                July 03, 2022
+                                            </div>
+                                            <h3 class="blog-item__heading">
+                                                How to manage your money in
+                                                online in this busy days...
+                                            </h3>
+                                            <a
+                                                href="#!"
+                                                class="blog-item__link"
+                                            >
+                                                Read Blog
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
