--- a/index.html
+++ b/index.html
@@ -115,20 +115,24 @@
                         <ul class="navbar__list">
                             <li>
                                 <a
-                                    href="#!"
+                                    href="#"
                                     class="navbar__link navbar__link--active"
                                 >
                                     Home
                                 </a>
                             </li>
                             <li>
-                                <a href="#!" class="navbar__link">Products</a>
+                                <a href="#work" class="navbar__link">
+                                    Products
+                                </a>
                             </li>
                             <li>
-                                <a href="#!" class="navbar__link">Features</a>
+                                <a href="#feature" class="navbar__link">
+                                    Features
+                                </a>
                             </li>
                             <li>
-                                <a href="#!" class="navbar__link">Blog</a>
+                                <a href="#blog" class="navbar__link">Blog</a>
                             </li>
                         </ul>
                     </nav>
@@ -492,7 +496,7 @@
 
         <main style="height: 5000px">
             <!-- Work -->
-            <section class="work">
+            <section id="work" class="work">
                 <div class="container">
                     <div class="work__inner">
                         <!-- Work media -->
@@ -567,7 +571,7 @@
             </section>
 
             <!-- Feature -->
-            <section class="feature">
+            <section id="feature" class="feature">
                 <div class="container">
                     <div class="feature__inner">
                         <div class="feature__row">
@@ -1006,7 +1010,7 @@
             </section>
 
             <!-- Blog -->
-            <section class="blog">
+            <section id="blog" class="blog">
                 <div class="container">
                     <div class="blog__inner">
                         <!-- Blog top -->
@@ -1143,6 +1147,64 @@
                                     </div>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- App -->
+            <section class="app">
+                <div class="container">
+                    <div class="app__inner">
+                        <p class="app__title section-title">Our App</p>
+                        <h2 class="app__heading section-heading">
+                            Download the Apps
+                        </h2>
+                        <p class="app__desc section-desc">
+                            Download our mobile apps and get started today with
+                            a special online bank and move faster
+                        </p>
+
+                        <!-- App download -->
+                        <figure class="app__download">
+                            <a href="#!" class="app__download-link">
+                                <img
+                                    src="./assets/img/app-01.svg"
+                                    alt="Google Play"
+                                    class="app__download-img"
+                                />
+                            </a>
+                            <a href="#!" class="app__download-link">
+                                <img
+                                    src="./assets/img/app-02.svg"
+                                    alt="App Store"
+                                    class="app__download-img"
+                                />
+                            </a>
+                        </figure>
+
+                        <!-- App decoration -->
+                        <div class="app__decor">
+                            <img
+                                src="./assets/icons/star.svg"
+                                alt=""
+                                class="app__decor-img"
+                            />
+                            <img
+                                src="./assets/icons/star.svg"
+                                alt=""
+                                class="app__decor-img"
+                            />
+                            <img
+                                src="./assets/icons/star.svg"
+                                alt=""
+                                class="app__decor-img"
+                            />
+                            <img
+                                src="./assets/icons/star.svg"
+                                alt=""
+                                class="app__decor-img"
+                            />
                         </div>
                     </div>
                 </div>
