--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
         <!-- Header -->
         <header class="header header__fixed">
             <div class="container">
-                <!-- Logo -->
                 <div class="header__inner">
                     <!-- Logo -->
                     <a href="#">
@@ -494,7 +493,7 @@
             </div>
         </section>
 
-        <main style="height: 5000px">
+        <main>
             <!-- Work -->
             <section id="work" class="work">
                 <div class="container">
@@ -1210,5 +1209,171 @@
                 </div>
             </section>
         </main>
+
+        <!-- Footer -->
+        <div class="footer">
+            <div class="footer__inner">
+                <div class="container">
+                    <div class="footer__row">
+                        <!-- Footer Column 1 -->
+                        <div class="footer__column">
+                            <!-- Logo -->
+                            <a href="#">
+                                <img
+                                    src="./assets/img/logo.svg"
+                                    alt="CeloBank"
+                                />
+                            </a>
+                        </div>
+
+                        <!-- Footer Column 2 -->
+                        <div class="footer__column">
+                            <h3 class="footer__heading section-heading">
+                                Sitemap
+                            </h3>
+                            <ul class="footer__list">
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Home
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Abouts
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Growers
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Merchants
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Contact
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- Footer Column 3 -->
+                        <div class="footer__column">
+                            <h3 class="footer__heading section-heading">
+                                Socials
+                            </h3>
+                            <ul class="footer__list">
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Facebook
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Linkedin
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Instagram
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="#!"
+                                        class="footer__link section-desc"
+                                    >
+                                        Twitter
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- Footer Column 4 -->
+                        <div class="footer__column">
+                            <h3 class="footer__heading section-heading">
+                                Head Office
+                            </h3>
+                            <p class="footer__desc section-desc">
+                                Xilliams Corner Wine © 2017. 1112 A Market St #
+                                Ste B22, Charlottesville, CA 45565
+                            </p>
+
+                            <!-- Footer Cta -->
+                            <div class="footer__cta">
+                                <h3
+                                    class="footer__heading footer__heading-cta section-heading"
+                                >
+                                    News letter
+                                </h3>
+
+                                <!-- Footer form -->
+                                <form action="" class="footer-form">
+                                    <input
+                                        type="email"
+                                        name=""
+                                        id="email"
+                                        class="footer-form__input"
+                                        placeholder="Email address..."
+                                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                                    />
+
+                                    <button
+                                        type="submit"
+                                        class="btn btn--primary footer__btn"
+                                    >
+                                        Subscribe
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Footer contact -->
+                    <div class="footer__row footer__contact">
+                        <div class="footer__mail section-desc">
+                            email@gmail.com
+                        </div>
+                        <div class="footer__phone section-desc">
+                            (123) 456-7890
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="footer__copyright-wrap">
+                <div class="container">
+                    <p class="footer__copyright">
+                        © 2020 Ligft Media All rights reserved.
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
